--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,8 +27,9 @@ set -g message-bg colour39
 set -g message-attr bold
 
 # Status bar
-set -g status-left '#[fg=colour235,bg=colour252,bold] #S #[fg=colour252,bg=colour234,bold] '
-set -g status-right '#[fg=colour238,bg=colour234,bold]#[fg=colour245,bg=colour238,bold] #(pwd) #[fg=colour252,bg=colour238,bold]#[fg=colour235,bg=colour252,bold] #(date +%H:%M) '
+set-option -g status-position bottom
+set -g status-left '#[fg=colour235,bg=colour252,bold] #S #[fg=colour252,bg=colour238,bold]#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,bold]'
+set -g status-right '#[fg=colour238,bg=colour234,bold]#[fg=colour245,bg=colour238,bold] #H #[fg=colour252,bg=colour238,bold]#[fg=colour235,bg=colour252,bold] #(date +%H:%M) '
 set -g window-status-format "#[fg=white,bg=colour234] #I #W "
 set -g window-status-current-format "#[fg=colour25,bg=colour39,noreverse,bold] #I #W "
 
