--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,3 +42,6 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# Copy and Paste from the clipboard is not that trivial anymore
+bind C-p run-shell "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
+bind C-y run-shell "tmux show-buffer | xclip -sel clip -i"
